--- a/i18n/locale/vi.json
+++ b/i18n/locale/vi.json
@@ -2,7 +2,7 @@
 	"common": {
 		"success": "Successfully",
 		"failed": "Failed",
-		"updateSuccess": "Update successfully",
+		"updateSuccess": "Update successfully VN",
 		"updateFailed": "Update failed",
 		"createSuccess": "Create successfully",
 		"createFailed": "Create failed",
